re PR target/19803 (__builtin_expect does not modify branch prediction for power4/5)

PR target/19803
	* predict.c (PROB_VERY_UNLIKELY): Use 1% instead of 10%.

From-SVN: r94714